SolvaTask/src/main/java/com/example/examplerestteamplate/errors/model/ErrorType.java
package com.example.examplerestteamplate.errors.model;

public enum ErrorType {
    APP,
    DATA_BASE
}
